Factored out multiple class styles from Bootstrap to custom CSS to clean HTML and ensure smooth transitions (nav, footer, challenge text options).  Also changed layout of challenges and options to be more readable, added has: pseudoselector to selected radio option.

--- a/static/styles.css
+++ b/static/styles.css
@@ -43,19 +43,19 @@ h1 {
     color: #f0f0f0;
     font-size: 1.1rem;
     border: 5px double #f0f0f0;
+    transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
 .btn-dark:hover {
     background-color: #f0f0f0;
     color: #000000;
     border: 5px double #353535;
-    transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
 .card { 
     border: 5px double #353535; 
-    padding: 10px; 
-    margin: 10px;
+    padding: 0.5rem; 
+    margin: 0.5rem 0 0.5rem 0;
 }
 
 .card-text {
@@ -64,15 +64,31 @@ h1 {
 
 .container-sm {
     width: 95%;
+    background-color: #f5f5f5;
+    border: 5px double #e7e7e7;
+    border-radius: 0.5rem;
+    margin: 1rem auto;
+    padding: 1rem auto;
+    flex-grow: 1;
 }
 
 .custom-heading {
     text-align: center;
 }
 
+.custom-radio {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+}
+
 .custom-radio .form-check-input:checked {
     background-color: #292929;
     border-color: #353535;
+}
+
+.custom-radio:has(.form-check-input:checked) {
+    background-color: #eaeaea;
 }
 
 .custom-radio .form-check-input:focus {
@@ -82,8 +98,6 @@ h1 {
 .custom-radio:hover {
     background-color: #f0f0f0;
     border-color: #353535;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 }
 
 .fade-in {
@@ -99,9 +113,15 @@ h1 {
     }
 }
 
-.footer-text {
+.footer {
+    background-color: #151515;
+    color: #f0f0f0;
     font-size: 1.1rem;
     font-weight: bold;
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-top: auto;
 }
 
 .key-container {
@@ -166,10 +186,27 @@ h1 {
     border-radius: 0.25rem;
 }
 
+.navbar-brand {
+    border: solid 1px #68747f;
+    border-radius: 0.25rem;
+    padding: 0.5rem 1rem;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+}
+
 .navbar-brand:hover {
     background-color: #353535;
     color: #f0f0f0;
     border-color: #353535;
+}
+
+.nav-item {
+    padding: 0.5rem;
+}
+
+.nav-link {
+    border-radius: 0.25rem;
+    padding-left: 0.5rem;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
 .nav-link:hover {
@@ -180,12 +217,6 @@ h1 {
 .option-text {
     font-size: 1.1rem;
     font-weight: bold;
-}
-
-.page-wrapper {
-    background-color: #f5f5f5;
-    border: 5px double #e7e7e7;
-    border-radius: 0.5rem;
 }
 
 /* Smaller block within the page for the form containers */
@@ -218,6 +249,7 @@ h1 {
     font-size: 1.2rem;
 }
 
-.text-muted {
-    font-size: 1.1rem;
+.muted-stat-text {
+    font-size: 0.9rem;
+    color: #68747f;
 }
